# research-book-scaffold

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  pyproject.toml  setup.sh
.agents/: README.md
.obsidian/: app.json  appearance.json  community-plugins.json
bibliography/: README.md  references.bib
config/: README.md  obsidian-codex.example.md
docs/: 00-overview.md  01-tooling.md  02-workflow.md  03-agent-orchestration.md  04-mcp-setup.md  04-mcp-skills-setup.md  05-security.md  06-quality-gates.md  07-citation-workflow.md  08-writing-workflow.md  09-audit-workflow.md  10-troubleshooting.md  11-obsidian-codex.md  11-obsidian-panel.md  12-academic-research-skills.md  12-external-skills-and-plugins.md  13-academic-research-skills.md  14-research-book-skills.md  15-obsidian-skills.md  15-production-release-qa.md  16-pre-commit-hooks.md  README.md  SKILLS_WORKFLOW.md  workflow.md
exports/: README.md
manuscript/: README.md  _quarto.yml  index.qmd
notes/: README.md
research/: README.md
scripts/: README.md  check_broken_internal_links.py  check_citations.py  check_external_skills.py  check_manuscript_readiness.py  check_obsidian_codex.py  check_obsidian_panel.py  check_placeholders.py  doctor.py  doctor.sh  environment_checks.py  git_utils.py  install_external_skills.py  install_obsidian_codex.sh  install_obsidian_panel.sh  new_from_template.py  obsidian_agent.py  project_config.py  render.sh  render_manuscript.py  script_env.sh  script_utils.py  setup_environment.py  (+3 more)
(+185 files in other folders)
