[project]
name = "research-book-boilerplate"
version = "0.1.0"
description = "Scholarly research and writing scaffold."
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["ruff==0.15.16"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["scripts"]

[tool.ruff.lint]
ignore = ["E402"]
